latest content update

--- a/calico-enterprise/getting-started/compatibility.mdx
+++ b/calico-enterprise/getting-started/compatibility.mdx
@@ -33,51 +33,57 @@ If your platform is listed below, the features in this release will work for you
 
 ## AKS
 
-| {{prodname}} version | AKS and Kubernetes versions | {{prodname}} support                                                                     |
-| -------------------- | --------------------------- | ---------------------------------------------------------------------------------------- |
-| 3.15                 | 1.23                        | - {{prodname}} CNI with network policy<br />- Azure CNI with {{prodname}} network policy |
-| 3.14                 | 1.22                        | - {{prodname}} CNI with network policy<br />- Azure CNI with {{prodname}} network policy |
-| 3.13                 | 1.21                        | Azure CNI with {{prodname}} network policy                                               |
-| 3.12                 | 1.21                        | Azure CNI with {{prodname}} network policy                                               |
-| 3.11                 | 1.21                        | Azure CNI with {{prodname}} network policy                                               |
-| 3.10                 | 1.21                        | Azure CNI with {{prodname}} network policy                                               |
-| 3.9                  | 1.21                        | Azure CNI with {{prodname}} network policy                                               |
-| 3.8                  | 1.20                        | Azure CNI with {{prodname}} network policy                                               |
-| 3.7                  | 1.20                        | Azure CNI with {{prodname}} network policy                                               |
-| 3.6                  | 1.19                        | Azure CNI with {{prodname}} network policy                                               |
-| 3.5                  | 1.19                        | Azure CNI with {{prodname}} network policy                                               |
+Kubernetes version support aligns with upstream Kubernetes to the latest version if available.
+
+| {{prodname}} version | {{prodname}} support                                                                     |
+| -------------------- | ---------------------------------------------------------------------------------------- |
+| 3.15                 | - {{prodname}} CNI with network policy<br />- Azure CNI with {{prodname}} network policy |
+| 3.14                 | - {{prodname}} CNI with network policy<br />- Azure CNI with {{prodname}} network policy |
+| 3.13                 | Azure CNI with {{prodname}} network policy                                               |
+| 3.12                 | Azure CNI with {{prodname}} network policy                                               |
+| 3.11                 | Azure CNI with {{prodname}} network policy                                               |
+| 3.10                 | Azure CNI with {{prodname}} network policy                                               |
+| 3.9                  | Azure CNI with {{prodname}} network policy                                               |
+| 3.8                  | Azure CNI with {{prodname}} network policy                                               |
+| 3.7                  | Azure CNI with {{prodname}} network policy                                               |
+| 3.6                  | Azure CNI with {{prodname}} network policy                                               |
+| 3.5                  | Azure CNI with {{prodname}} network policy                                               |
 
 ## EKS
 
-| {{prodname}} version | EKS and Kubernetes versions | {{prodname}} support                                                                   |
-| -------------------- | --------------------------- | -------------------------------------------------------------------------------------- |
-| 3.15                 | 1.23 - 1.24                 | - {{prodname}} CNI with network policy<br />- AWS CNI with {{prodname}} network policy |
-| 3.14                 | 1.22                        | - {{prodname}} CNI with network policy<br />- AWS CNI with {{prodname}} network policy |
-| 3.13                 | 1.21                        | - {{prodname}} CNI with network policy<br />- AWS CNI with {{prodname}} network policy |
-| 3.12                 | 1.21                        | - {{prodname}} CNI with network policy<br />- AWS CNI with {{prodname}} network policy |
-| 3.11                 | 1.21                        | - {{prodname}} CNI with network policy<br />- AWS CNI with {{prodname}} network policy |
-| 3.10                 | 1.21                        | - {{prodname}} CNI with network policy<br />- AWS CNI with {{prodname}} network policy |
-| 3.9                  | 1.21                        | - {{prodname}} CNI with network policy<br />- AWS CNI with {{prodname}} network policy |
-| 3.8                  | 1.20                        | - {{prodname}} CNI with network policy<br />- AWS CNI with {{prodname}} network policy |
-| 3.7                  | 1.19                        | - {{prodname}} CNI with network policy<br />- AWS CNI with {{prodname}} network policy |
-| 3.6                  | 1.19                        | - {{prodname}} CNI with network policy<br />- AWS CNI with {{prodname}} network policy |
-| 3.5                  | 1.18                        | - {{prodname}} CNI with network policy<br />- AWS CNI with {{prodname}} network policy |
+Kubernetes version support aligns with upstream Kubernetes to the latest version if available.
+
+| {{prodname}} version | {{prodname}} support                                                                   |
+| -------------------- | -------------------------------------------------------------------------------------- |
+| 3.15                 | - {{prodname}} CNI with network policy<br />- AWS CNI with {{prodname}} network policy |
+| 3.14                 | - {{prodname}} CNI with network policy<br />- AWS CNI with {{prodname}} network policy |
+| 3.13                 | - {{prodname}} CNI with network policy<br />- AWS CNI with {{prodname}} network policy |
+| 3.12                 | - {{prodname}} CNI with network policy<br />- AWS CNI with {{prodname}} network policy |
+| 3.11                 | - {{prodname}} CNI with network policy<br />- AWS CNI with {{prodname}} network policy |
+| 3.10                 | - {{prodname}} CNI with network policy<br />- AWS CNI with {{prodname}} network policy |
+| 3.9                  | - {{prodname}} CNI with network policy<br />- AWS CNI with {{prodname}} network policy |
+| 3.8                  | - {{prodname}} CNI with network policy<br />- AWS CNI with {{prodname}} network policy |
+| 3.7                  | - {{prodname}} CNI with network policy<br />- AWS CNI with {{prodname}} network policy |
+| 3.6                  | - {{prodname}} CNI with network policy<br />- AWS CNI with {{prodname}} network policy |
+| 3.5                  | - {{prodname}} CNI with network policy<br />- AWS CNI with {{prodname}} network policy |
 
 ## GKE
 
-| {{prodname}} version | GKE and Kubernetes versions | {{prodname}} support                       |
-| -------------------- | --------------------------- | ------------------------------------------ |
-| 3.15                 | 1.22                        | - GKE CNI with {{prodname}} network policy |
-| 3.14                 | 1.21                        | - GKE CNI with {{prodname}} network policy |
-| 3.13                 | 1.21                        | - GKE CNI with {{prodname}} network policy |
-| 3.12                 | 1.21                        | - GKE CNI with {{prodname}} network policy |
-| 3.11                 | 1.21                        | - GKE CNI with {{prodname}} network policy |
-| 3.10                 | 1.20                        | - GKE CNI with {{prodname}} network policy |
-| 3.9                  | 1.20                        | - GKE CNI with {{prodname}} network policy |
-| 3.8                  | 1.19                        | - GKE CNI with {{prodname}} network policy |
-| 3.7                  | 1.19                        | - GKE CNI with {{prodname}} network policy |
-| 3.6                  | 1.18                        | - GKE CNI with {{prodname}} network policy |
-| 3.5                  | 1.18                        | - GKE CNI with {{prodname}} network policy |
+Kubernetes version support aligns with upstream Kubernetes to the latest version if available.
+
+| {{prodname}} version | {{prodname}} support                       |
+| -------------------- | ------------------------------------------ |
+| 3.15                 | - GKE CNI with {{prodname}} network policy |
+| 3.14                 | - GKE CNI with {{prodname}} network policy |
+| 3.13                 | - GKE CNI with {{prodname}} network policy |
+| 3.12                 | - GKE CNI with {{prodname}} network policy |
+| 3.11                 | - GKE CNI with {{prodname}} network policy |
+| 3.10                 | - GKE CNI with {{prodname}} network policy |
+| 3.9                  | - GKE CNI with {{prodname}} network policy |
+| 3.8                  | - GKE CNI with {{prodname}} network policy |
+| 3.7                  | - GKE CNI with {{prodname}} network policy |
+| 3.6                  | - GKE CNI with {{prodname}} network policy |
+| 3.5                  | - GKE CNI with {{prodname}} network policy |
 
 ## kOps on AWS
 
@@ -114,14 +120,14 @@ If your platform is listed below, the features in this release will work for you
 
 | {{prodname}} version | MKE version                          | {{prodname}} support                 | Kubernetes versions |
 | -------------------- | ------------------------------------ | ------------------------------------ | ------------------- |
-| 3.15                 | MKE 3.5.5                            | {{prodname}} CNI with network policy | 1.21                |
-| 3.14                 | MKE 3.5.3                            | {{prodname}} CNI with network policy | 1.21                |
-| 3.13                 | MKE 3.5.1                            | {{prodname}} CNI with network policy | 1.21                |
-| 3.12                 | MKE 3.5.1                            | {{prodname}} CNI with network policy | 1.21                |
-| 3.11                 | MKE 3.5.1                            | {{prodname}} CNI with network policy | 1.20                |
-| 3.10                 | MKE 3.4.4                            | {{prodname}} CNI with network policy | 1.20                |
-| 3.9                  | MKE 3.4.4                            | {{prodname}} CNI with network policy | 1.19                |
-| 3.8                  | MKE 3.4.2                            | {{prodname}} CNI with network policy | 1.19                |
+| 3.15                 | MKE 3.5                              | {{prodname}} CNI with network policy | 1.21                |
+| 3.14                 | MKE 3.5                              | {{prodname}} CNI with network policy | 1.21                |
+| 3.13                 | MKE 3.5                              | {{prodname}} CNI with network policy | 1.21                |
+| 3.12                 | MKE 3.5                              | {{prodname}} CNI with network policy | 1.21                |
+| 3.11                 | MKE 3.5                              | {{prodname}} CNI with network policy | 1.20                |
+| 3.10                 | MKE 3.4                              | {{prodname}} CNI with network policy | 1.20                |
+| 3.9                  | MKE 3.4                              | {{prodname}} CNI with network policy | 1.19                |
+| 3.8                  | MKE 3.4                              | {{prodname}} CNI with network policy | 1.19                |
 | 3.7                  | Docker Enterprise 3.1 with UCP 3.3.5 | {{prodname}} CNI with network policy | 1.19                |
 | 3.6                  | Docker Enterprise 3.1 with UCP 3.3.5 | {{prodname}} CNI with network policy | 1.18                |
 | 3.5                  | Docker Enterprise 3.1 with UCP 3.3.5 | {{prodname}} CNI with network policy | 1.18                |
@@ -146,17 +152,17 @@ If your platform is listed below, the features in this release will work for you
 
 | {{prodname}} version | RKE version | {{prodname}} support                 | Kubernetes versions |
 | -------------------- | ----------- | ------------------------------------ | ------------------- |
-| 3.15                 | 1.3.13      | {{prodname}} CNI with network policy | 1.23                |
-| 3.14                 | 1.3.3       | {{prodname}} CNI with network policy | 1.22                |
-| 3.13                 | 1.3.3       | {{prodname}} CNI with network policy | 1.21                |
-| 3.12                 | 1.3.3       | {{prodname}} CNI with network policy | 1.21                |
-| 3.11                 | 1.3.2       | {{prodname}} CNI with network policy | 1.20                |
-| 3.10                 | 1.2.9       | {{prodname}} CNI with network policy | 1.20                |
-| 3.9                  | 1.2.9       | {{prodname}} CNI with network policy | 1.19                |
-| 3.8                  | 1.2.8       | {{prodname}} CNI with network policy | 1.19                |
-| 3.7                  | 1.2.6       | {{prodname}} CNI with network policy | 1.19                |
-| 3.6                  | 1.2.5       | {{prodname}} CNI with network policy | 1.18                |
-| 3.5                  | 1.2.2       | {{prodname}} CNI with network policy | 1.18                |
+| 3.15                 | 1.3         | {{prodname}} CNI with network policy | 1.23                |
+| 3.14                 | 1.3         | {{prodname}} CNI with network policy | 1.22                |
+| 3.13                 | 1.3         | {{prodname}} CNI with network policy | 1.21                |
+| 3.12                 | 1.3         | {{prodname}} CNI with network policy | 1.21                |
+| 3.11                 | 1.3         | {{prodname}} CNI with network policy | 1.20                |
+| 3.10                 | 1.2         | {{prodname}} CNI with network policy | 1.20                |
+| 3.9                  | 1.2         | {{prodname}} CNI with network policy | 1.19                |
+| 3.8                  | 1.2         | {{prodname}} CNI with network policy | 1.19                |
+| 3.7                  | 1.2         | {{prodname}} CNI with network policy | 1.19                |
+| 3.6                  | 1.2         | {{prodname}} CNI with network policy | 1.18                |
+| 3.5                  | 1.2         | {{prodname}} CNI with network policy | 1.18                |
 
 ## RKE2
 
