latest content update

--- a/calico-cloud/tutorials/training/about-network-policy.mdx
+++ b/calico-cloud/tutorials/training/about-network-policy.mdx
@@ -221,7 +221,7 @@ spec:
 
 ### Hierarchical policy
 
-[Calico Cloud](../policy-tiers.mdx) supports hierarchical network policy using policy tiers. RBAC
+[Calico Cloud](../../network-policy/policy-tiers/tiered-policy.mdx) supports hierarchical network policy using policy tiers. RBAC
 for each tier can be defined to restrict who can interact with each tier. This can be used to delegate trust across
 multiple teams.
 
