--- a/calico-cloud/get-started/connect/operator-checklist.mdx
+++ b/calico-cloud/get-started/connect/operator-checklist.mdx
@@ -20,6 +20,10 @@ Are you seeing any of these issues at the start of installation?
 
 The cluster you are using to install {{prodname}} does not have a CNI plugin installed, the CNI is incompatible. If your cluster has functional pod networking and you see this message, it is likely that kubelet has been configured to use kubenet networking, which is not compatible with {{prodname}}. You can use a different cluster, or re-create your cluster with [compatible networking](requirements/system-requirements.mdx).
 
+### {{prodname}} cannot be connected to a cluster with FIPS mode enabled
+
+At this time, FIPS mode is not supported in {{prodname}}. Disable FIPS mode in the cluster and install again.
+
 ### Install script is taking a long time
 
 If you are migrating a large cluster from a previous manifest-based Calico install, the script can take some time; this is normal.
