--- a/calico-cloud/network-policy/policy-tiers/tiered-policy.mdx
+++ b/calico-cloud/network-policy/policy-tiers/tiered-policy.mdx
@@ -1,6 +1,6 @@
 ---
-title: Get started with tiered policies
-description: Understand how tiered policy works and supports microsegmentation.
+title: Understanding policy tiers
+description: Learn about policies, tiers, and policy evaluation.
 ---
 
 ## Seamless network policy integration
@@ -17,11 +17,11 @@ description: Understand how tiered policy works and supports microsegmentation.
 
 All {{prodname}} and Kubernetes network policies reside in tiers. You can start "thinking in tiers" by grouping your teams and types of policies within each group. For example, we recommend these three tiers (platform, security, and application).
 
-![policy-types](/img/calico-enterprise/master/policy-types.png)
+![policy-types](/img/calico-cloud/master/policy-types.svg)
 
-Next, you can determine the priority of policies in tiers (from top to bottom). In the following example, the platform and security tiers use {{prodname}} global network policies that apply to all pods, while developer teams can safely manage pods within namespaces using Kubernetes network policy for their applications and microservices.
+Next, you can determine the priority of policies in tiers (from top to bottom). In the following example, that platform and security tiers use {{prodname}} global network policies that apply to all pods, while developer teams can safely manage pods within namespaces using Kubernetes network policy for their applications and microservices.
 
-![policy-tiers](/img/calico-enterprise/master/policy-tiers.png)
+![policy-tiers](/img/calico-cloud/master/policy-tiers.png)
 
 ## Create a tier and policy
 
@@ -53,7 +53,7 @@ kubectl apply -f security.yaml
 
 The default tier is created during installation and is always the last tier.
 
-![default-tier](/img/calico-enterprise/master/default-tier.png)
+![default-tier](/img/calico-cloud/master/default-tier.png)
 
 The default tier is where:
 
@@ -65,13 +65,10 @@ The default tier is where:
 
 System tiers are added during installation and are hidden by default.
 
-- **allow-tigera** - a required tier with policies to enable and secure traffic flows for Tigera services and subsystems.
+- **allow-tigera** - contains component policies
+- **tigera-security** - contains threat protection policies
 
-:::note
-
-The Tigera Operator manages this tier and reverts any user edits to policy or moving of this tier. This ensures that you do not inadvertently impact the operation of {{prodname}}. However, you can still change how traffic is enforced using policies in adjacent tiers. For details, see [Change allow-tigera tier behavior](allow-tigera.mdx).
-
-:::
+> **Important!** Do not modify these tiers or change their order. Create all of your tiers after `allow-tigera` and `tigera-security`.
 
 ## Moving tiers
 
@@ -79,7 +76,7 @@ You can move tiers by dragging and moving them in the graphical sequence, but al
 
 To show all tiers, click **View** and select all of the tiers in the Show tiers list.
 
-![hidden-tiers](/img/calico-enterprise/master/hidden-tiers.png)
+![hidden-tiers](/img/calico-cloud/master/hidden-tiers.png)
 
 Now you can reorder tiers by dragging and moving them.
 
@@ -87,13 +84,13 @@ Now you can reorder tiers by dragging and moving them.
 
 Tiers are ordered from left to right, starting with the highest priority (also called highest precedence) tiers.
 
-![tier-order](/img/calico-enterprise/master/tier-order.png)
+![tier-order](/img/calico-cloud/master/tier-order.png)
 
 In the example above, tier priorities are as follows:
 
 - **security tier** - is higher priority than platform tier
 - **platform tier** - is higher priority than default tier
-- **default tier** - is always the last tier and cannot be reordered
+- **default tier** - is always the last tier, and cannot be reordered
 
 The tier you put as the highest priority (after system tiers), depends on your environment. In compliance-driven environments, the security tier may be the highest priority (as shown above). There is no one-size-fits-all order.
 
@@ -101,7 +98,7 @@ The tier you put as the highest priority (after system tiers), depends on your e
 
 Policies are processed in sequential order from top to bottom.
 
-![policy-processing](/img/calico-enterprise/master/policy-processing.png)
+![policy-processing](/img/calico-cloud/master/policy-processing.png)
 
 Two mechanisms drive how traffic is processed across tiered policies:
 
@@ -120,7 +117,7 @@ The following diagrams show the relationship between all of the elements that af
 - **Policy action rules** define how to process traffic in and across tiers, and policy labels and selectors specify how groups of pods are allowed to communicate with each other and other network endpoints
 - The **CNI**, **{{prodname}} components**, and underlying **dataplane** (iptables/eBPF) all make use of labels and selectors as part of routing traffic.
 
-![tier-funnel](/img/calico-enterprise/master/tier-funnel.png)
+![tier-funnel](/img/calico-cloud/master/tier-funnel.svg)
 
 ### Policy action rules
 
@@ -134,9 +131,9 @@ The following diagrams show the relationship between all of the elements that af
 
 As shown in the following diagram, at the end of each tier is an implicit default deny. This is a safeguard that helps mitigate against unsecured policy. Because of this safeguard, you must explicitly apply the **Pass** action rule when you want traffic evaluation to continue. In the following example, the Pass action in a policy ensures that traffic evaluation continues, and overrides the implicit default deny.
 
-![implicit-deny](/img/calico-enterprise/master/implicit-deny.svg)
+![implicit-deny](/img/calico-cloud/master/implicit-deny.svg)
 
-Let’s look at a Dev/Ops global network policy in a high precedence tier (Platform). The policy denies ingress and egress traffic to workloads that match selector, `env == "stage"`. To ensure that policies continue to evaluate traffic after this policy, the policy adds a Pass action for both ingress and egress.
+Let’s look at a Dev/Ops global network policy in a high precedence tier (Platform). The policy denies ingress and egress traffic to workloads that match selector, `env != "stage"`. To ensure that policies continue to evaluate traffic after this policy, the policy adds a Pass action for both ingress and egress.
 
 **Pass action rule example**
 
@@ -168,9 +165,9 @@ spec:
 
 Whoever is responsible for tier creation, also needs to understand how policy selects matching endpoints across tiers. For normal policy processing (without apply-on-forward, pre-DNAT, and do-not-track), if no policies within a tier apply to endpoints, the tier is skipped, and the tier's implicit deny behavior is not executed.
 
-In the following example, **policy D** in the Security tier includes a Pass action rule because we want traffic evaulation to continue to the next tier in sequence. In the Platform tier, there are no selectors in policies that match endpoints so the tier is skipped, including the end of tier deny. Evaluation continues to the Application tier. **Policy J** is the first policy with a matching endpoint.
+In the following example, policy D in the Security tier includes a **Pass action** rule because we want traffic evaulation to continue to the next tier in sequence. In the Platform tier, there are no selectors in policies that match endpoints so the tier is skipped, including the end of tier deny. Evaluation continues to the Application tier. **Policy J** is the first policy with a matching endpoint.
 
-![endpoint-match](/img/calico-enterprise/master/endpoint-match.svg)
+![endpoint-match](/img/calico-cloud/master/endpoint-match.svg)
 
 ### Default endpoint behavior
 
@@ -200,7 +197,3 @@ We recommend:
   For example, you may need to update Pass action rules to policies before or after the new tier. Intervening tiers may require changes to policies before and after, depending on the endpoints.
 
 - Use the **policy preview** feature to see effects of policy in action before enforcing it, and use the **staged network policy** feature to test the entire tier workflow before pushing it to production
-
-## Above and beyond
-
-- For details on using RBAC for fine-grained access to tiers and policies, see [Configure RBAC for tiered policies](rbac-tiered-policies.mdx).
