--- a/calico-cloud/tutorials/calico-cloud-features/tour.mdx
+++ b/calico-cloud/tutorials/calico-cloud-features/tour.mdx
@@ -6,17 +6,19 @@ description: A quick tour of the Calico Cloud user interface.
 ## What you will learn
 
 - Manager UI features and controls
+- How to gain visibility into clusters
 
-Let's go through each item in the Manager left navbar from top to bottom. You can follow along using any cluster.
+Let's go through each item in the Manager UI left navbar from top to bottom. You can follow along using any cluster.
 
-## Dashboards
+## Dashboard
 
 > From the left navbar, click Dashboards.
 
-Dashboards are a birds-eye view of cluster activity. Note the following:
+The Dashboard provides a birds-eye view of cluster activity. Note the following:
 
-- The filter panel at the top lets you change the time range
+- The filter panel at the top lets you change dashboard views and the time range.
 - The **Layout Settings** shows the default metrics. To get WireGuard metrics for pod-to-pod and host-to-host encryption, you must [enable WireGuard](../../compliance/encrypt-cluster-pod-traffic.mdx).
+- For application-related dashboard cards to show data, like HTTP Response Codes or Url Requests, you need to [configure L7 logs](../../visibility/elastic/l7/configure.mdx).
 
 ![dashboards](/img/calico-cloud/master/dashboards.png)
 
@@ -158,7 +160,7 @@ This page is where you switch views between clusters in Manager UI. When you con
 
 ![managed-clusters](/img/calico-cloud/master/managed-clusters.png)
 
-## Compliance
+## Compliance Reports
 
 > From the left navbar, click **Compliance**.
 
@@ -195,14 +197,16 @@ How do you know if you have an infected workload? A possible threat? {{prodname}
 
 ![alerts](/img/calico-cloud/master/alerts.png)
 
-As shown, there are many types of alerts you can enable. None are enabled by default.
+As shown, there are many types of alerts you can enable. None are enabled by default.  
+**Anomaly Detection**
 
-## Kibana
+This page lets you enable/disable anomaly detectors that are preconfigured by {{prodname}}. Anomaly detection uses {{prodname}} Elasticsearch logs (flow logs, L7 logs, and DNS logs) to learn the behavior of cluster nodes, pods, services, and other entities that send log records (applications, load balancers, databases, etc.).
 
-{{prodname}} includes a fully-integrated deployment of Elasticsearch to collect flow
-log data that drives key features like the Flow Visualizer, metrics in the Dashboard and Policy Board, policy automation, and testing features and security. {{prodname}} also embeds Kibana so you can view raw log data for the traffic within your cluster.
+## Logs
 
-> From the left navbar, click **Kibana**.
+{{prodname}} includes a fully-integrated deployment of Elastic to collect flow log data that drives key features like the Flow Visualizer, metrics in the Dashboard and Policy Board, policy automation, and testing features and security. {{prodname}} also embeds Kibana so you can view raw log data for the traffic within your cluster.
+
+> From the left navbar, click **Logs**.
 
 **Dashboards**
 
@@ -216,8 +220,12 @@ Kibana provides its own set of filtering capabilities to drill down into log dat
 
 ![kibana](/img/calico-cloud/master/kibana.png)
 
+## Threat feeds
+
+You can add threat intelligence feeds to {{prodname}} to trace network flows of suspicious IP addresses and domains. Then, you can use network policy to block pods from contacting IPs or domains.
+
 Now that you understand the basics, we recommend the following:
 
 - [Service Graph tutorial](service-graph.mdx)
-- [Understanding policy tiers](../policy-tiers.mdx)
+- [Understanding policy tiers](../../network-policy/policy-tiers/tiered-policy.mdx)
 - [Understanding network sets](networksets.mdx)
