--- a/calico-cloud/tutorials/enterprise-security/namespace-isolation.mdx
+++ b/calico-cloud/tutorials/enterprise-security/namespace-isolation.mdx
@@ -17,7 +17,7 @@ Isolating ingress traffic access can be implemented across different groups in y
 
 ## Create global network policies
 
-Microsegmentation across namespaces is achieved using {{prodname}} policy labels and selectors with a **Pass** action rule. If you are unfamiliar with policy action rules, see [Tutorial - Understanding policy tiers](../policy-tiers.mdx).
+Microsegmentation across namespaces is achieved using {{prodname}} policy labels and selectors with a **Pass** action rule. If you are unfamiliar with policy action rules, see [Tutorial - Understanding policy tiers](../../network-policy/policy-tiers/tiered-policy.mdx).
 
 In the following example, let's assume the following:
 
